--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ body {
     height: 75%;
     align-items: center;
     padding: 2em;
+    font-family: "Libre Baskerville";
   }
 
   #StuffPicker {
