--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
   
   header {
     flex: 0 80px;
+    background-color: #033811;
   }
   
   main {
@@ -14,11 +15,13 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background-color: #67a878;
   }
   
   footer {
     text-align: center;
     align-items: center;
+    background-color: #063613;
   }
   
   menu {
@@ -60,15 +63,15 @@ body {
     width: 100%;
     height: 75%;
     align-items: center;
-    padding: 2em;
+    padding: 1em;
     font-family: "Libre Baskerville";
   }
 
   #StuffPicker {
     display: flex;
     flex-flow: row wrap;
-    width: 75%;
-    height: 100%;
+    width: 50%;
+    height: 1 calc(60vh - 100px);;
     align-items: center;
   }
 
@@ -76,15 +79,27 @@ body {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 2.5%;
+  padding:  2vh;
   }
 
-  #packingType {
-    display: flex;
-    flex-flow: row wrap;
+  #volume {
+    padding: 5px;
+  }
+
+  #shapeFill {
+    padding: 5px;
   }
 
   .factbox {
     font-size: larger;
     
+  }
+
+  .mathPicker {
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .packRad {
+    padding: 10px;
   }
