--- a/user.css
+++ b/user.css
@@ -1,28 +1,62 @@
+main {
+    padding: 5%;
+}
+
 #userMain {
+    background-color: #f0f0c7;
+    padding: 2%;
     display: grid;
-    grid-template-areas: 'main main main main main main right';
-    align-items: center;
+    grid-template-columns: [col1] 8fr [last] 2fr;
+    grid-template-rows:[row1] 1fr [row2] 6fr [row3] 4fr;
     width: 100%;
     height: 100%;
+    justify-items: stretch;
+    border-radius: 2em;
 }
 
-#userLeft{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    height: 100%;
-    min-width: 800px;
-    grid-area: main;
-}
-
-#userRight {
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    min-width: 200px;
-    grid-area: right;
+#name {
+    grid-area: name;
+    text-align: center;
+    background-color: #39403a;
+    border-radius: 2em;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
 }
 
 #favorite {
-
+    grid-area: fav;
+    text-align: center;
+    grid-column: 1 / 2 ;
+    grid-row: 2 / 3;
 }
+
+#latestFills {
+    grid-area: updates;
+    text-align: center;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    text-wrap: wrap;
+}
+
+#UserCustomItems {
+    grid-area: custom;
+    text-align: center;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+#jokeBox{
+    grid-area: joke;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    text-wrap: wrap;
+}
+
+table, th, td {
+    border: 1px solid;
+    padding: 5px;
+  }
+  
+  table {
+    width: 100%;
+  }
