--- a/src/why/why.css
+++ b/src/why/why.css
@@ -4,7 +4,7 @@
     font-family: 'Libre Baskerville';
 }
 
-p {
+#pretentious {
     font-family: 'Tangerine', serif;
-    font-size: xxx-large;
+    font-size: xx-large;
 }
