--- a/src/user/user.css
+++ b/src/user/user.css
@@ -15,26 +15,31 @@
     border-radius: 2em;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
+    padding: 2%;
 }
 
 #favorite {
     grid-column: 1 / 2 ;
     grid-row: 2 / 3;
+    padding: 2%;
 }
 
 #latestFills {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    padding: 2%;
 }
 
 #UserCustomItems {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+    padding: 2%;
 }
 
 #jokeBox{
     grid-column: 1 / 2;
     grid-row: 3 / 4;
+    padding: 2%;
 }
 
 table, th, td {
