--- a/src/custom/custom.css
+++ b/src/custom/custom.css
@@ -3,5 +3,15 @@
 }
 
 #CustomMain{
+    display: flex;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
+
+#CustomItemOptions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
