--- a/src/custom/itemForm.css
+++ b/src/custom/itemForm.css
@@ -1,14 +1,3 @@
-input[type=text] {
-
-}
-
-input[type=number] {
-
-}
-
-select {
-}
-
 .customForm {
     width:75%;
     min-width: 150px;
@@ -18,4 +7,32 @@ select {
 
 form > *{
     margin: 0.5em;
+}
+
+#name {
+    background-color: #39403a;
+    border-radius: 2em;
+    border: 1em;
+}
+
+#volume {
+    background-color: #39403a;
+    border-radius: 2em;
+    border: 1em;
+}
+
+#shape {
+    background-color: #39403a;
+    border-radius: 2em;
+    border: 1em;
+    margin: 1em;
+}
+
+#submit {
+    border: 1em;
+    margin: 1em;
+}
+
+#shape option{
+    color: white;
 }
